@@ -1243,4 +1243,31 @@ class CoursePress_Helper_Utility {
 		$security_key = md5( NONCE_KEY );
 		return $security_key;
 	}
+
+	/**
+	 * Get total secounds.
+	 *
+	 * @since 2.0.4
+	 *
+	 * @param integer $secounds Number of secounds.
+	 * @param integer $hours Number of hours.
+	 * @param integer $minutes Number of minutes.
+	 * @return array {
+	 *      @type string Time in format hh:mm:ss
+	 *      @type integer Number of hours.
+	 *      @type integer Number of minutes.
+	 *      @type integer Number of seconds.
+	 * }
+	 * internet Total number of seconds.
+	 */
+	public static function get_time( $seconds = 0, $minutes = 0, $hours = 0 ) {
+		$time = (int) $seconds + (int) $minutes * MINUTE_IN_SECONDS + (int) $hours * HOUR_IN_SECONDS;
+		return array(
+			'total_seconds' => $time,
+			'time' => date( 'H:i:s', $time ),
+			'hours' => date( 'H', $time ),
+			'minutes' => date( 'i', $time ),
+			'seconds' => date( 's', $time ),
+		);
+	}
 }
