@@ -292,6 +292,21 @@ class CoursePress_Template_Module {
 					$allow_retry = true;
 					$attempts = (int) $attributes['retry_attempts'];
 					$duration = $attributes['duration'];
+					$dur = explode( ':', $duration );
+					/**
+					 * sanitize time format
+					 */
+					switch ( sizeof( $dur ) ) {
+						case 1:
+							$duration = sprintf( '00:%02d', $dur[0] );
+						break;
+						case 2:
+							$duration = sprintf( '%02d:%02d', $dur[0], $dur[1] );
+						break;
+						case 3:
+							$duration = sprintf( '%02d:%02d:%02d', $dur[0], $dur[1], $dur[2] );
+						break;
+					}
 
 					$format = '<span class="quiz_timer" data-limit="%1$s" data-retry="%2$s">%1$s</span><span class="quiz_timer_info">%3$s</span>';
 
@@ -492,8 +507,8 @@ class CoursePress_Template_Module {
 				);
 				if ( preg_match( '%\?%', $url ) ) {
 					// URL with ? doesn't read on shortcode
-					$param = substr( $url, strrpos( $url, '?' )+1 );
-					$url = substr( $url, 0, strrpos($url, '?' ) );
+					$param = substr( $url, strrpos( $url, '?' ) + 1 );
+					$url = substr( $url, 0, strrpos( $url, '?' ) );
 					$param = explode( '&', $param );
 					$param = array_filter( $param );
 
